:sparkles: Arreglos de diseño

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -16,6 +16,7 @@ $blanco: #fff;
 $gris1: #E2E8ED;
 $verde: #0C8F5A;
 $verdeFuerte: #01693F;
+$verdeMilitar: #122826;
 $naranja: #E96247;
 $naranjaClaro: #FAE1DC;
 $azul1: #4D72AA;
