--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -290,10 +290,10 @@
     margin-top: -2rem;
     margin-left: 2rem;
 
-    @include tablet(){
+    @include escritorio(){
         height: 8rem;
         width: 15rem;
-        margin-left: 1rem;
+        margin-left: 0;
     }
 
     @include telefono(){
@@ -322,16 +322,15 @@
         height: 55rem;
     }
 
-    @include tablet(){
-        margin-left: 1rem;
-        margin-right: 0;
+    @include escritorio(){
+        margin-left: 2rem;
+        margin-right: 2rem;
         padding: 4rem 1rem 7rem 1rem;
-        height: 70rem;
+        height: auto;
     }
 
     @include telefono(){
         margin-right: 1rem;
-        height: 35rem;
         padding: 5rem 2rem 2rem 2rem;
     }
 
