--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -77,3 +77,8 @@ $crema: #FAF3DD;
 $crema2: #FEF3D1;
 $amarillo2: #FFF600;
 
+$grisPag07: #E1E7ED;
+$amarilloPag07: #FEFFE0;
+$azulPag07: #DBE8FF;
+
+
