--- a/src/scss/bootstrap/_index.scss
+++ b/src/scss/bootstrap/_index.scss
@@ -6,8 +6,18 @@
 $fuente-headings: v.$poppins;
 $fuente-textos: v.$poppins;
 
+$h1-font-size: 2.4rem;
+$h2-font-size: 2rem;
+$h3-font-size: 1.8rem;
+$h4-font-size: 1.6rem;
+$h5-font-size: 1.6rem;
+
 $font-size-root: 62.5%;
 $font-size-base: 1.6rem;
+
+$headings-margin-bottom: 0;
+
+$list-inline-padding: 0;
 
 //Importar Bootstrap
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
