:rocket: Add pagina13

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -77,3 +77,14 @@ $crema: #FAF3DD;
 $crema2: #FEF3D1;
 $amarillo2: #FFF600;
 $dorado: #C69A0D; 
+
+$fondo1: #C0D7FC;
+$fondo2: #DEE6F6;
+$fondo3: #CFF1E3;
+$fondo4: #FFF4D4;
+$fondo5: #F7DDD7;
+$fondo6: #E4F1F1;
+$fondo7: #FFFFFF;
+$fondo9: #EBD8F3;
+$grisClaro2: #D6D6D8;
+$grisFondo: #AEC1D3;
