--- a/src/scss/layouts/_pag04.scss
+++ b/src/scss/layouts/_pag04.scss
@@ -91,6 +91,10 @@
                 @include m.escritorioHD{
                     font-size: 1.2rem;
                 }
+
+                @include m.escritorio{
+                    font-size: 1.6rem;
+                }
             }
         }
     }
@@ -219,12 +223,29 @@
             border-radius: 50%;
             margin-bottom: 1rem;
             text-align: center;
-            font-size: 1.2rem;
-            padding: 2rem;
+            font-size: 1.4rem;
+            padding: 2.2rem;
             transition: all .3s ease-in-out;
+
+            @include m.escritorio{
+                margin-bottom: 0;
+            }
 
             h3{
                 display: none;
+
+                @include m.escritorio{
+                    display: block;
+                    font-size: 1.8rem;
+                    color: v.$blanco;
+                    text-align: center;
+                    padding: 2rem;
+                }
+            }
+
+            p{
+                font-size: 1.2rem;
+                font-weight: 700;
             }
             
 
@@ -237,6 +258,7 @@
             
             @include m.escritorio{
                 display: flex;
+                justify-content: center;
                 flex-wrap: wrap;
                 width: 100%;
                 border-radius: 0;
@@ -247,6 +269,7 @@
                 p{
                     padding: 2rem 4rem;  
                     color: v.$blanco;
+                    margin-bottom: 0;
                 }
 
                 &#circulo1{
@@ -320,8 +343,8 @@
 
                 &#circulo7{
                     flex-direction: column;
-                    font-size: 1rem;
-                    padding: 2rem 4rem;
+                    padding: 2rem;
+                    line-height: 1;
 
                     h4{
                         font-size: 1.2rem;
@@ -329,8 +352,12 @@
                     }
 
                     ul{
-                        
+                        font-size: 1rem;
                         text-align: justify;
+
+                        @include m.escritorio{
+                            font-size: 1.4rem;
+                        }
                     }
                 }
             }
