--- a/src/scss/layouts/_pag05.scss
+++ b/src/scss/layouts/_pag05.scss
@@ -380,6 +380,10 @@
     
                     @include m.tablet{
                         padding: 8rem;
+
+                        @include m.telefono{
+                            padding: 2rem;
+                        }
                     }
     
                     ul{
