--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -82,4 +82,6 @@ $grisPag07: #E1E7ED;
 $amarilloPag07: #FEFFE0;
 $azulPag07: #DBE8FF;
 
-
+$verdePag12: #19D899;
+$azulPag12: #A4C0ED;
+$naranjaPag12: #FFEDE9;
