--- a/src/scss/layouts/_pag12.scss
+++ b/src/scss/layouts/_pag12.scss
@@ -246,14 +246,39 @@
         .personaje-2{
             padding: 2rem 2rem 0 2rem;
             height: 10%;
+
+            @include m.tablet{
+                height: 18rem;
+                width: 25rem;
+            }
+
+            @include m.telefono{
+                height: 25rem;
+                width: 27rem;
+            }
         }
 
         #globo-2{
             @include m.globoNegro(izquierda);
             position: relative;
+            display: flex;
             width: 40%; 
             height: 40%;
             top: 5rem;
+
+            @include m.tablet{
+                height: 18rem;
+                width: 100%;
+                top: 0;
+                left: 2rem;
+                padding: 5rem 4rem 2rem 4rem;
+            }
+
+            @include m.telefono{
+                padding: 2rem;
+                height: 27rem;
+                left: 0;
+            }
         }
 
         #instrucciones{
@@ -267,10 +292,39 @@
             left: 5rem;
             top: 5rem;
 
+            @include m.tablet{
+                position: absolute;
+                top: 18rem;
+                width: 100%;
+                height: 8rem;
+                left: 0;
+                border-radius: 0;
+                padding-left: 10rem;
+                padding-top: 3rem;
+            }
+
+            @include m.telefono{
+                top: 26rem;
+                padding-top: 1rem;
+            }
+
+
             .mano{
                 position: relative;
                 display: flex;
                 width: 20%;
+
+                @include m.tablet{
+                    width: 10%;
+                    height: 5rem;
+                    left: -5rem;
+                    top: -1rem;
+                }
+
+                @include m.telefono{
+                    width: 50%;
+                    top: 1rem;
+                }
             }
         }
     }
@@ -292,6 +346,14 @@
             height: 40rem;
             position: relative;
             cursor: pointer;
+
+            #aseguradora{
+                @include m.resaltar(v.$azulRey, 400);
+            }
+
+            #transacciones{
+                @include m.resaltar(v.$naranja, 400);
+            }
     
             @include m.escritorio{
                 width: 48%;
@@ -300,19 +362,22 @@
             }
     
             @include m.tablet{
+                top: 6rem;
                 width: 65%;
+                height: 30rem;
             }
     
             @include m.telefono{
                 width: 95%;
+                height: 38rem;
             }
     
             &#flip1{
-                @include m.flip-cardsPag12(fuerte, v.$grisPag07);
+                @include m.flip-cardsPag12(fuerte, v.$grisPag07, v.$azulRey);
             }
             
             &#flip2{
-                @include m.flip-cardsPag12(fuerte, v.$naranjaPag12);
+                @include m.flip-cardsPag12(fuerte, v.$naranjaPag12, v.$naranja);
             }
             
             .cont-titulo{
