--- a/src/scss/layouts/_pag14.scss
+++ b/src/scss/layouts/_pag14.scss
@@ -3,27 +3,72 @@
 
 #cont-info14{
 
-    @include m.grid(4, 3rem);
+    @include m.grid(8, 3rem);
+
+    @include m.escritorioHD{
+        @include m.grid(1, 3rem);
+    }
 
     #cont-caracteristicas{
-        grid-column: 1/2;
+        grid-column: 1/4;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        background: v.$azul2;
+
+        @include m.escritorioHD{
+            grid-column: 1/2;
+        }
 
         .globo{
             @include m.globoNegro(abajo);
+            border-radius: 0;
             ul{
                 text-align: left;
             }
+        }
+        
+        .instrucciones-mano{
+            border-radius: 0;
+        }
+
+        @include m.escritorioHD{
+
+            .globo{
+                width: 60%;
+                order: 2;
+                font-size: 1.4rem;
+            }
+
+            .cont-imagen{
+                width: 20%;
+                order: 1;
+            }
+
+            .instrucciones-mano{
+                width: 20%;
+                order: 3;
+                padding: 1rem;
+                font-size: 1.2rem;
+                flex-direction: column-reverse;
+                
+                p{
+                    width: 90%;
+                }
+
+                .cont-imagen{
+                    width: 6rem;
+                }
+            }
+
         }
 
     }
 
     #contenido-info{
-        padding: 6rem 3rem;
-        grid-column: 2/5;
+        padding: 15rem 3rem;
+        grid-column: 4/9;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(4, 1fr);
@@ -32,59 +77,58 @@
         "info info info info info"
         "info info info info info"
         "pc6 pc7 pc8 pc9 pc10";
-        gap: 2rem;
-                             
-        .cont-computadoras{
+        gap: 6rem;
 
-            #info-computadoras{
-                width: 100%;
-                height: 100%;
-                background: v.$gris1;
-                grid-area: info;
-            }
-
-            #pc-1{
-                grid-area: pc1;
-            }
-
-            #pc-2{
-                grid-area: pc2;
-            }
-
-            #pc-3{
-                grid-area: pc3;
-            }
-
-            #pc-4{
-                grid-area: pc4;
-            }
-
-            #pc-5{
-                grid-area: pc5;
-            }
-
-            #pc-6{
-                grid-area: pc6;
-            }
-
-            #pc-7{
-                grid-area: pc7;
-            }
-
-            #pc-8{
-                grid-area: pc8;
-            }
-
-            #pc-9{
-                grid-area: pc9;
-            }
-
-            #pc-10{
-                grid-area: pc10;
-            }
-            
+        @include m.escritorioHD{
+            grid-column: 1/2;
         }
-        
+
+        #info-computadoras{
+            width: 100%;
+            height: 100%;
+            background: v.$gris1;
+            grid-area: info;
+        }
+
+        #pc-1{
+            grid-area: pc1;
+        }
+
+        #pc-2{
+            grid-area: pc2;
+        }
+
+        #pc-3{
+            grid-area: pc3;
+        }
+
+        #pc-4{
+            grid-area: pc4;
+        }
+
+        #pc-5{
+            grid-area: pc5;
+        }
+
+        #pc-6{
+            grid-area: pc6;
+        }
+
+        #pc-7{
+            grid-area: pc7;
+        }
+
+        #pc-8{
+            grid-area: pc8;
+        }
+
+        #pc-9{
+            grid-area: pc9;
+        }
+
+        #pc-10{
+            grid-area: pc10;
+        }
         
     }
 }
