--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -95,3 +95,8 @@ $azulPag07: #DBE8FF;
 $verdePag12: #19D899;
 $azulPag12: #A4C0ED;
 $naranjaPag12: #FFEDE9;
+
+$amarilloPastel: #FFE89F;
+$rosaPastel: #F5E0DC;
+$azulPastel: #E1E7ED;
+$verdePastel: #E9F7F1;
