--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -10,20 +10,20 @@
         z-index: 1;
         @include m.tablet{
             height: 150px;
-            margin-top: 42px;
-            margin-left: 25px;
+            margin-top: 6%;
+            margin-left: 1%;
         }
         @include m.telefono{
             height: 150px;
-            margin-top: 55px;
-            margin-left: 15px;
+            margin-top: 12%;
+            margin-left: 0.5%;
             float: right;
         }
     }
     .cuadro-negro{
         margin-top: 5%;
         font-size: 18px;
-        padding:40px 50px 40px 48%;
+        padding:40px 50px 40px 50.9%;
         width: 1600px;
         height: 40%;
         background-color: #1a1e1e;
@@ -32,18 +32,20 @@
         z-index: -1;
         @include m.tablet{
             margin-top: 5px;
-            padding:40px 50px 40px 50.5%;
+            padding:40px 50px 40px 54.9%;
             font-size: 16px;
         }
         @include m.telefono{
             margin-top: 5px;
-            padding:30px 30px 30px 60.5%;
-            font-size: 1.7vh;
+            padding:30px 30px 30px 63.5%;
+            font-size: 1.2vh;
             height: 200px;
+            min-height: 205px;
         }
     }
 }
 .nivel2{
+    max-height: 450px;
     display: flex;
     @include m.telefono{
         display:block;
@@ -78,10 +80,12 @@
 
     .contenedor3{
         height: 450px;
+        max-height: 450px;
         width: 45%;
         .buzon{
             display: flex;
             background-color:#ECF5FF;
+            max-height: 80px;
             figure{
                 width:80px;
                 height:80px;
@@ -92,7 +96,10 @@
                 }
             }
             .text-buzon{
-                font-size: 2.2vh;
+                font-size: 1.35vw;
+                @include m.tablet{
+                    font-size: 1.85vw;
+                }
                 padding: 15px 20px;
                 text-align: center;
                 align-items: center;
@@ -103,29 +110,43 @@
             display: flex;
             background-color: #FAF3DD;
             align-items: center;
+            margin: 0px;
+            max-height: 370px;
+            @include m.tablet{
+                max-height: 365px;
+            }
             .text-amarillo{
-                width: 430px;
-                height: 365px;
-                font-size: 1.35vw;
+                width: 100%;
+                height: 70%;
+                max-height: 375px;
+                min-height: 367px;
+                font-size: 1.45vw;
                 padding: 20px 0px 20px 20px;
                 @include m.tablet{
-                    font-size: 1.9vh;
-                    width: 440px;
+                    font-size: 1.65vw;
+                    height: 70%;
+                    width: 80%;
+                    max-height: 365px;
+                    min-height: 365px;
                 }
             }
             .persona2{
-                img{
-                    height: 100%;
-                    width: 120%;
-                    margin-top: 40%;
-                    padding-right: 20%;
+                .p2{
+                    max-width: 125px;
+                    img{
+                        height: 70%;
+                        width: 100%;
+                        margin-top: 150%;
+                        padding-right: 12%;
+                    }
                 }
                 @include m.tablet{
-                    width: 70%;
+                    width: 50%;
                     img{
-                        height: 80%;
+                        height: 70%;
                         width: 100%;
-                        margin-top: 200%;
+                        max-height: 7%;
+                        margin-top: 120% !important;
                         padding-right: 5%;
                         float: right;
                     }
@@ -134,6 +155,41 @@
             }
         }
         
+    }
+
+}
+
+.intranet{
+    margin-top: 40px;
+    display:flex;
+    height: 20%;
+    width: 100%;
+    min-width: 960px;
+    background-color: #F8E6E2;
+    .persona-computadora{
+        width: 20%;
+        img{
+            width: 100%;
+            height: 90%;
+            min-height:50px;
+            padding: 0px 0px 0px 30px;
+            margin-top: 10%;
+        }
+    }
+    .dialogo3{
+        width: 80%;
+        max-width: 600px;
+        p{
+            @include m.globoNegro(izquierda);
+            margin-top: 3.5%;
+            margin-left: 10%;
+            padding-bottom: 2%;
+            width: 80%;
+            height: 70%;
+            min-height: 30px;
+            font-size: 1.2vw;
+            
+        }
     }
 }
 
@@ -179,7 +235,7 @@
                 }
             }
             .text-buzon{
-                font-size: 2.2vh;
+                font-size: 4vw !important;
                 padding: 15px 20px;
                 text-align: center;
                 align-items: center;
@@ -193,7 +249,7 @@
             .text-amarillo{
                 width: 70%;
                 height: 365px;
-                font-size: 1.35vw;
+                font-size: 3.4vw !important;
                 padding: 20px 0px 20px 20px;
             }
             .persona2{
@@ -205,6 +261,34 @@
                 }
             }
                 
+        }
+    }
+
+    .intranet{
+        margin-top: 85%;
+        display:flex;
+        height: 150px;
+        width: 100%;
+        min-width: 960px;
+        background-color: #F8E6E2;
+        .persona-computadora{
+            img{
+                width: 250px;
+                min-height: 180px;
+                padding: 0px 0px 0px 30px;
+            }
+        }
+        .globo1{
+            p{
+                margin-top: 3.5%;
+                margin-left: 10%;
+                padding-bottom: 20px ;
+                width: 75%;
+                height: 40%;
+                min-height: 100px;
+                font-size: 1.7vh;
+                @include m.globoNegro(izquierda);
+            }
         }
     }
         
