--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -90,9 +90,11 @@
                 width:80px;
                 height:80px;
                 img{
-                    padding: 5px 20px 5px 25px;
-                    height: 80px;
-                    width: 80px;
+                    height: 100%;
+                    padding: 10% 0px 10% 15%;
+                    width: 100%;
+                    min-height: 60px;
+                    min-width: 60px;
                 }
             }
             .text-buzon{
@@ -178,9 +180,11 @@
     }
     .dialogo3{
         width: 80%;
-        @include m.globoNegro(izquierda);
-        p{
-            
+        @include m.tablet{
+            max-width: 350px;
+        }
+        .text-globo{
+            @include m.globoNegro(izquierda);
             margin-top: 3.5%;
             margin-left: 10%;
             padding-bottom: 2%;
@@ -188,7 +192,12 @@
             height: 70%;
             min-height: 30px;
             font-size: 1.1vw;
-            
+        }
+        @include m.tablet{
+            .text-globo{
+                @include m.globoNegro(izquierda);
+                border-radius: 5px !important;
+            }
         }
     }
 }
@@ -292,4 +301,59 @@
         }
     }
         
+}
+
+.carrusel{
+    margin-left: 20%;
+    width: 60%;
+    #carouselExampleControls{
+        .carousel-inner{
+            .carousel-item{
+                .slide{
+                    width: 90%;
+                    margin-right: 5px;
+                    .txt-slide{
+                        background-color: #C70000;
+                        margin-left: 11%;
+                        margin-right: 11%;
+                        margin-bottom: 0%;
+                        width: 90%;
+                        height: 20%;
+                        min-height: 40px;
+                        max-height: 90px;
+                        padding: 5%;
+                        color: #fff;
+                        font-size: 1.6vh;
+                    }
+                    figure{
+                        width: 90%;
+                        margin-left: 11%;
+                        margin-right: 11%;
+                        background-color: #F6F6F6;
+                        height: 30%;
+                        min-height: 250px;
+                        max-height: 250px;
+                        align-items: center;
+                        img{
+                            margin-left: 35%;
+                            width: 40%;
+                            margin-top: 10%;
+                        }
+                    }
+                }
+            }
+        }
+        .carousel-control-next{
+            margin-right: -5px;
+            .carousel-control-next-icon{
+                position: 500px !important;
+                background-image: url("/build/img/contenido/Pag17/icono-next.svg");
+            }
+        }
+        .carousel-control-prev{
+            .carousel-control-prev-icon{
+                background-image: url("/build/img/contenido/Pag17/icono-prev.svg");
+            }
+        }
+    }
 }
