--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -321,9 +321,9 @@
                         height: 20%;
                         min-height: 40px;
                         max-height: 90px;
-                        padding: 5%;
+                        padding: 3% 5%;
                         color: #fff;
-                        font-size: 1.6vh;
+                        font-size: 1.5vh;
                     }
                     figure{
                         width: 90%;
