--- a/src/scss/layouts/_pag19.scss
+++ b/src/scss/layouts/_pag19.scss
@@ -3,26 +3,301 @@
 
 .titulo-verde{
     width: 100%;
-    background-color: ;
+    height: 5%;
+    background-color:#0C8F5A ;
+    padding: 1% 0%;
+    text-align: center;
+    color: #fff;
+
 }
 
-.contenido{
+.contenido2{
+    display: flex;
+    width: 100%;
+    background-color: #FAF5E7;
+    z-index: -2;
+    height: 30%;
+    max-height: 500px;
+    padding-top: 2%;
     .persona1{
+        position: relative;
+        height: 90%;
+        z-index: 2;
+        padding-top: 16.5%;
+       img{
+            height: 100%;
+            width: 100%;
+            min-height: 200px;
+            max-height: 290px;
+            min-width: 200px;
+            margin-left: 10%;
 
+       }
     }
     .rec1{
-
+        height: 70%;
+        min-height: 340px;
+        width: 100%;
+        background-color: #E1E7ED;
+        z-index: 1;
+        margin-left: -12%;
+        padding: 1%;
+        margin-right: 5%;
+        font-size: 1vw;
+        font-weight: bold;
+        border-radius: 2%;
     }
     .rec2{
+        height: 70%;
+        width: 100%;
+        background-color: #F3ECD7;
+        margin-right: 5%;
+        padding: 1%;
+        max-height: 600px;
+        min-height: 340px;
+        border-radius: 2%;
+        ul{
+            li{
+                color:#E96247 ;
+                p{
+                    color: black;
+                    font-size: 0.81vw;
+                    font-weight: bold;
+                }
+            }
+        }
         .vinoculares{
-
+            width: 27%;
+            height: 3%;
+            z-index: 2;
+            margin-left: 65%;
+            margin-top: -5%;
+            float: right;
+            
         }
     }
     .rec3{
-
+        position: relative;
+        height: 80%;
+        min-height: 340px;
+        width: 100%;
+        background-color: #E4E4E4;
+        z-index: 2;
+        padding: 1%;
+        font-size: 0.9vw;
+        font-weight: bold;
+        margin-right: -10%;
+        border-radius: 2%;
     }
-    .persona2{
-
+    .contenedor2{
+        margin-top: 18.5%;
+        height: 100%;
+        width: 45%;
+        .persona2{
+            position: relative;
+            width: 100%;
+            height: 70%;
+            z-index: 3;
+            margin-left: -5%;
+            margin-top: 0px;
+        }
     }
 
+}
+
+.cuadro-naranja{
+    background-color:#E96247;
+    color: #fff;
+    width: 100%;
+    height: 8%;
+    margin-top: 60px;
+    padding: 2% 1% 2% 5%;
+}
+
+.contenido3{
+    display: flex;
+    .contenido4{
+        background-color: #E1E7ED;
+        width: 50%;
+        height: 70%;
+        .contenido8{
+            width: 70%;
+            margin-left: 20%;
+            margin-top: 8%;
+            .titulo-azul{
+                position: relative;
+                background-color: #002F87;
+                color: #fff;
+                font-weight: bold;
+                z-index: 1;
+                text-align: center;
+                padding: 2%;
+                margin-bottom: 4%;
+            }
+            .cuadro-blanco{
+                position: relative;
+                background-color: #fff;
+                color: #002F87;
+                font-size: 1vw;
+                font-weight:bold ;
+                padding: 5% 20%;
+                z-index: 1;
+            }
+        }
+        .persona-pizarra{
+            position: relative;
+            height: 30%;
+            width: 30%;
+            z-index: 2;
+            margin-left: 5%;
+            margin-top: -7%;
+        }
+    }
+    .contenido5{
+        width: 50%;
+        height: 10%;
+        max-height:250px;
+        .titulo-verde{
+            width: 100%;
+            text-align: left;
+            padding-left: 3%;
+            padding-top: 3%;
+        }
+        .cuadro2-blanco{
+            display: flex;
+            position: relative;
+            height: 40%;
+            .globo1{
+                @include m.globoNegro(derecha);
+                width: 60%;
+                height: 50%;
+                margin-top: 1%;
+                margin-left: 1%;
+                font-size: 1.05vw;
+                z-index: 1;
+            }
+            .persona-esc{
+                z-index: 2;
+                img{
+                    height: 90%;
+                    width: 80%;
+                    margin-left: 20%;
+                    margin-top: -4%;
+                }
+            }
+        }
+    }
+    .contenido6{
+        margin-top: -5%;
+        background-color: #FAF2D6;
+        height: 65%;
+        min-height: 290px;
+        padding: 5%;
+        .globo2{
+            @include m.globoNegro(arriba);
+            height: 40%;
+            font-size: 1.3vw;
+            margin-top: 2%;
+        }
+        .globo2:after{
+            left: 80% !important;
+            top:-15% !important;
+        }
+    }
+}
+
+.contenido10{
+    margin-top: 4%;
+    background-color: #F1F1F5;
+    height: 40%;
+    min-height: 650px;
+    padding: 1% 0% 1.3% 3%;
+    .contenido11{
+        margin-top: 4%;
+        display: flex;
+        color: #fff;
+        .cuadro-naranja{
+            margin-top: 0%;
+            background-color: #E96247;
+            width: 42%;
+            height: 14% !important;
+            padding: 0.2% 0% 0.2% 0%;
+            text-align: center;
+            border-radius: 8px;
+            font-size: 1.08vw;
+        }
+        .cuadro-amarillo{
+            background-color:#F9C931 ;
+            width: 25%;
+            height: 15.5%;
+            padding: 1.5%;
+            text-align: center;
+            margin-left: 3%;
+            margin-right: 3%;
+            border-radius: 8px;
+        }
+        .cuadro-azul{
+            background-color: #002F87;
+            width: 25%;
+            height: 15.5%;
+            padding: 1%;
+            text-align: center;
+            border-radius: 8px;
+        }
+    }
+    .contenido12{
+        display: flex;
+        .cuadro{
+            height: 360px;
+            margin-right: 2%;
+            margin-top: 10%;
+            text-align: center;
+            align-items: center;
+            padding: 2%;
+            border-bottom-left-radius: 7px;
+            border-bottom-right-radius: 7px;
+            img{
+                position: relative;
+                height: 100px;
+                width: 100px;
+                z-index: 1;
+                margin-top: -40%;
+            }
+        }
+        .naranja{
+            width: 20%;
+            position: relative;
+            z-index: 2;
+            border: solid 1.5px #E96247;
+            font-size: 0.85vw;
+        }
+        .amarillo{
+            width: 24%;
+            margin-left: 1%;
+            position: relative;
+            z-index: 2;
+            border: solid 1.5px #F9C931;
+            padding:3% 2% 4% 2%;
+            font-size: 1.2vw;
+        }
+        .azul{
+            width: 24%;
+            margin-left: 2.5%;
+            position: relative;
+            z-index: 2;
+            border: solid 1.5px #002F87;
+            padding-top: 3%;
+            font-size: 1.2vw;
+        }
+    }
+    .contenido13{
+        margin-top: 5%;
+        width: 95%;
+        align-items: center;
+        height: 30%;
+        background-color:#1A1E1E ;
+        color: #fff;
+        border-radius: 7px;
+        padding: 1%;
+    }
 }
