:fire: ejercicio drag

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -100,3 +100,6 @@ $amarilloPastel: #FFE89F;
 $rosaPastel: #F5E0DC;
 $azulPastel: #E1E7ED;
 $verdePastel: #E9F7F1;
+$verdeMenta: #95DEC0;
+
+$lila: #D49ED8;
