--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -571,3 +571,8 @@
         }        
     }
 }
+
+@mixin posit($color) {
+    border-top: 3rem solid $color;
+    background: lighten($color,  20);
+}
