:fire: Actividades finales 1.0

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -12,6 +12,10 @@ body{
     color: v.$colorFuente;
 }
 
+:root{
+    scroll-behavior: smooth;
+}
+
 .contenedor{
     width: 90%;
     max-width: 120rem;
