--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -143,7 +143,7 @@
                     background-color: #0C8F5A;
                     width: 90%;
                     height: 90%;
-                    font-size: 0.8vw;
+                    font-size: 0.7vw;
                     text-align: center;
                     padding-top: 4%;
                 }
@@ -161,18 +161,43 @@
         }
     }
     .contenedor21final{
-
-        .persona1-21{
-            img{
-                height: 12% !important;
-                max-height: 60px !important;
-                width: 24% !important;
-                max-width: 100px !important    ;
+        .cuadro-amarillo21{
+            display: flex;
+            background-color: #F9C931;
+            width:100%;
+            height: 50%;
+            min-height: 350px;
+            .persona1-21{
+                position: relative;
+                z-index: 2;
+                img{
+                    height: 70%;
+                    width: 20%;
+                    min-width: 230px;
+                    margin-top: 55%;
+                    margin-left: 7%;
+                }
             }
-        }
-        .cuadro-verde{
-            .cuadro-blanco{
-                
+            .cuadro-azul21{
+                position: relative;
+                z-index: 1;
+                width:135%;
+                height: 40%;
+                background-color:  #002F87 ;
+                margin-left: -35%;
+                margin-top: 10%;
+                padding-left: 50%;
+                p{
+                    width: 70%;
+                    height: 60%;
+                    min-height: 150px;
+                    border: solid 1px #fff;
+                    color: #fff;
+                    margin: 5%;
+                    text-align: center;
+                    padding: 3.2%;
+                    font-size: 1.1vw;
+                }
             }
         }
     }
