avance hasta pagina 22.1

--- a/src/scss/layouts/_pag22.scss
+++ b/src/scss/layouts/_pag22.scss
@@ -107,7 +107,7 @@
                     }
                 }
                 p{
-    
+                    text-align: center;
                 }
             }
         }
@@ -130,7 +130,7 @@
                     }
                 }
                 p{
-    
+                    text-align: center;
                 }
             }
         }
@@ -153,7 +153,7 @@
                     }
                 }
                 p{
-    
+                    text-align: center;
                 }
             }
         }
