--- a/src/scss/layouts/_pag19.scss
+++ b/src/scss/layouts/_pag19.scss
@@ -11,7 +11,7 @@
 
 }
 
-.contenido2{
+.contenido2pag19{
     display: flex;
     width: 100%;
     background-color: #FAF5E7;
@@ -19,7 +19,7 @@
     height: 30%;
     max-height: 500px;
     padding-top: 2%;
-    .persona1{
+    .persona1pag19{
         position: relative;
         height: 90%;
         z-index: 2;
@@ -34,7 +34,7 @@
 
        }
     }
-    .rec1{
+    .rec1pag19{
         height: 70%;
         min-height: 340px;
         width: 100%;
@@ -47,7 +47,7 @@
         font-weight: bold;
         border-radius: 2%;
     }
-    .rec2{
+    .rec2pag19{
         height: 70%;
         width: 100%;
         background-color: #F3ECD7;
@@ -76,7 +76,7 @@
             
         }
     }
-    .rec3{
+    .rec3pag19{
         position: relative;
         height: 80%;
         min-height: 340px;
@@ -89,11 +89,11 @@
         margin-right: -10%;
         border-radius: 2%;
     }
-    .contenedor2{
+    .contenedor2pag19{
         margin-top: 18.5%;
         height: 100%;
         width: 45%;
-        .persona2{
+        .persona2pag19{
             position: relative;
             width: 100%;
             height: 70%;
@@ -102,10 +102,9 @@
             margin-top: 0px;
         }
     }
-
 }
 
-.cuadro-naranja{
+.cuadropag19-naranja{
     background-color:#E96247;
     color: #fff;
     width: 100%;
@@ -114,17 +113,17 @@
     padding: 2% 1% 2% 5%;
 }
 
-.contenido3{
+.contenido3pag19{
     display: flex;
-    .contenido4{
+    .contenido4pag19{
         background-color: #E1E7ED;
         width: 50%;
         height: 70%;
-        .contenido8{
+        .contenido8pag19{
             width: 70%;
             margin-left: 20%;
             margin-top: 8%;
-            .titulo-azul{
+            .titulopag19-azul{
                 position: relative;
                 background-color: #002F87;
                 color: #fff;
@@ -134,7 +133,7 @@
                 padding: 2%;
                 margin-bottom: 4%;
             }
-            .cuadro-blanco{
+            .cuadropag19-blanco{
                 position: relative;
                 background-color: #fff;
                 color: #002F87;
@@ -144,7 +143,7 @@
                 z-index: 1;
             }
         }
-        .persona-pizarra{
+        .personapag19-pizarra{
             position: relative;
             height: 30%;
             width: 30%;
@@ -153,21 +152,21 @@
             margin-top: -7%;
         }
     }
-    .contenido5{
+    .contenido5pag19{
         width: 50%;
         height: 10%;
         max-height:250px;
-        .titulo-verde{
+        .titulopag19-verde{
             width: 100%;
             text-align: left;
             padding-left: 3%;
             padding-top: 3%;
         }
-        .cuadro2-blanco{
+        .cuadro2pag19-blanco{
             display: flex;
             position: relative;
             height: 40%;
-            .globo1{
+            .globo1pag19{
                 @include m.globoNegro(derecha);
                 width: 60%;
                 height: 50%;
@@ -176,7 +175,7 @@
                 font-size: 1.05vw;
                 z-index: 1;
             }
-            .persona-esc{
+            .personapag19-esc{
                 z-index: 2;
                 img{
                     height: 90%;
@@ -187,36 +186,36 @@
             }
         }
     }
-    .contenido6{
+    .contenido6pag19{
         margin-top: -5%;
         background-color: #FAF2D6;
         height: 65%;
         min-height: 290px;
         padding: 5%;
-        .globo2{
+        .globo2pag19{
             @include m.globoNegro(arriba);
             height: 40%;
             font-size: 1.3vw;
             margin-top: 2%;
         }
-        .globo2:after{
+        .globo2pag19:after{
             left: 80% !important;
             top:-15% !important;
         }
     }
 }
 
-.contenido10{
+.contenido10pag19{
     margin-top: 4%;
     background-color: #F1F1F5;
     height: 40%;
     min-height: 650px;
     padding: 1% 0% 1.3% 3%;
-    .contenido11{
+    .contenido11pag19{
         margin-top: 4%;
         display: flex;
         color: #fff;
-        .cuadro-naranja{
+        .cuadropag19-naranja{
             margin-top: 0%;
             background-color: #E96247;
             width: 42%;
@@ -226,7 +225,7 @@
             border-radius: 8px;
             font-size: 1.08vw;
         }
-        .cuadro-amarillo{
+        .cuadropag19-amarillo{
             background-color:#F9C931 ;
             width: 25%;
             height: 15.5%;
@@ -236,7 +235,7 @@
             margin-right: 3%;
             border-radius: 8px;
         }
-        .cuadro-azul{
+        .cuadropag19-azul{
             background-color: #002F87;
             width: 25%;
             height: 15.5%;
@@ -245,9 +244,9 @@
             border-radius: 8px;
         }
     }
-    .contenido12{
+    .contenido12pag19{
         display: flex;
-        .cuadro{
+        .cuadropag19{
             height: 360px;
             margin-right: 2%;
             margin-top: 10%;
@@ -290,7 +289,7 @@
             font-size: 1.2vw;
         }
     }
-    .contenido13{
+    .contenido13pag19{
         margin-top: 5%;
         width: 95%;
         align-items: center;
